[package]
edition = "2021"
authors = ["emik"]
name = "canvas"
version = "1.0.0"

[dependencies]
axum = "0.7.5"
hyper = "1.2.0"
once_cell = "1.19.0"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }

[lints.clippy]
nursery = "deny"
pedantic = "deny"
unwrap_used = "deny"
enum_glob_use = "deny"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
strip = "symbols"
codegen-units = 1
